[package]
name = "iced_flatlist"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otavio Cardi Vidoto <luiz.vidoto@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.5.2", features = ["tokio", "debug"] }
iced_native = "0.6.1"
ouroboros = "0.15.5"

[workspace]
members = ["example"]