[package]
name = "iced_flatlist"
version = "0.4.0"
edition = "2021"
authors = ["Luiz Otavio Cardi Vidoto <luiz.vidoto@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", features = ["tokio", "debug"] }
iced_native = { version = "0.9.1" }
iced_lazy = { version = "0.5.0" }
iced_style = { version = "0.7.0" }
ouroboros = "0.15.5"

[workspace]
members = ["examples/*"]