[package]
name = "iced_flatlist_example"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otavio Cardi Vidoto <luiz.vidoto@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch="master", features = ["tokio", "debug"] }
iced_native = { git = "https://github.com/iced-rs/iced.git", branch="master"}
iced_lazy = { git = "https://github.com/iced-rs/iced.git", branch="master"}
iced_flatlist = { path="../"}
fake = { version = "2.5", features=['derive']}
rand = "0.8.5"