[package]
name = "iced_flatlist_normal_scroller"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otavio Cardi Vidoto <luiz.vidoto@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", features = ["tokio", "debug"] }
iced_native = { version = "0.10.1" }
iced_lazy = { version = "0.6.1" }
iced_flatlist = { path="../../" }
fake = { version = "2.5", features=['derive']}
rand = "0.8.5"