[package]
name = "iced_flatlist_scroller_example"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otavio Cardi Vidoto <luiz.vidoto@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { path = "../../../iced/", features = ["tokio", "debug"] }
iced_native = { path = "../../../iced/native/" }
iced_lazy = { path = "../../../iced/lazy/" }
iced_flatlist = { path="../../" }
fake = { version = "2.5", features=['derive']}
rand = "0.8.5"